# hpackage-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: auto-dependabot.yml  build.yml  rust.yml  submodule-sync.yml
src/: build.rs  lib.rs
