[package]
name = "hpackage"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hpackage/hpackage-rs"
authors = ["BadMagic"]
description = "Rust client library for the hpackage schema"
license = "MIT"
build = "src/build.rs"

[dependencies]
http = "1.0.0"
jsonschema = "0.21.0"
serde = "1.0.160"
serde_json = "1.0.96"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
cargo-emit = "0.2.1"
prettyplease = "0.2.4"
schemars = "0.8.12"
serde = "1.0.160"
serde_json = "1.0.96"
syn = "2.0.15"
# we need to be a bit ahead of latest release to support some schema features
typify = { git = "https://github.com/oxidecomputer/typify.git", rev = "1a995388cd8dc3dbf67d51b762e46073bcfb1ebd" }
